--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "csvtojson": "^1.1.6",
     "fs": "0.0.1-security",
-    "nodemailer": "^4.0.1"
+    "nodemailer": "^4.0.1",
+    "npm": "^5.0.3",
+    "readline-sync": "^1.4.7",
+    "urlencode": "^1.1.0"
   }
 }
